Add header navigation and ngRx

--- a/src/app/components/languages/languages.component.html
+++ b/src/app/components/languages/languages.component.html
@@ -1,1 +1,6 @@
-<p>languages component</p>
+<div class="languages">
+  <button class="languages-btn-menu" mat-button [matMenuTriggerFor]="menu">{{currentLocale$ | async}}</button>
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item *ngFor="let locale of locales" (click)="select(locale.name)">{{locale.label}}</button>
+  </mat-menu>
+</div>
