feat: navigation component

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,4 @@
-<div>
-  <p>header component</p>
+<header>
   <app-navigation></app-navigation>
   <app-languages></app-languages>
-</div>
+</header>
