--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,1 +1,47 @@
 <p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
+<p>main page!</p>
