WIP feat: author-search.service, author-of-day

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,1 +1,3 @@
 <p>main page!</p>
+<app-search-widget></app-search-widget>
+<app-author-of-day [authorOfDay]="authorOfDay$ | async"></app-author-of-day>
