--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,11 @@
+@import "../../../variables";
+
 .header {
   display: flex;
   align-items: center;
   min-height: 70px;
   padding: 0 20px;
-  background-color: #455a64;
+  background-color: $header-background-color;
+  position: sticky;
+  top: 0;
 }
