--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,3 +1,2 @@
-<p>main page!</p>
-<app-search-widget></app-search-widget>
+<h1>portal description</h1>
 <app-author-of-day [authorOfDay]="authorOfDay$ | async"></app-author-of-day>
