--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -2,23 +2,40 @@
   <a class="navigation-logo" routerLink="/">
     <span class="navigation-title">Culture Portal</span>
     <span class="navigation-topic">Architects of Belarus</span>
+    <!-- TODO: check fonts for ru and by languages
+           <span class="navigation-title">{{ 'CULTURE_PORTAL' | translate }}</span>
+    <span class="navigation-topic">{{ 'ARCHITECTS_OF_BELARUS' | translate }}</span> -->
   </a>
 
   <ul class="navigation-list">
     <li class="navigation-item">
-      <a class="navigation-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
+      <a
+        class="navigation-link"
+        routerLink="/"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact: true }"
+        >{{ 'HOME' | translate }}</a
+      >
     </li>
     <li class="navigation-item">
-      <a class="navigation-link" routerLink="/authors" routerLinkActive="active">Architects</a>
+      <a class="navigation-link" routerLink="/authors" routerLinkActive="active">{{
+        'ARCHITECTS' | translate
+      }}</a>
     </li>
     <li class="navigation-item">
-      <a class="navigation-link" routerLink="/team" routerLinkActive="active">Team</a>
+      <a class="navigation-link" routerLink="/team" routerLinkActive="active">{{
+        'TEAM' | translate
+      }}</a>
     </li>
     <li class="navigation-item">
-      <a class="navigation-link" routerLink="/worklog" routerLinkActive="active">Worklog</a>
+      <a class="navigation-link" routerLink="/worklog" routerLinkActive="active">{{
+        'WORKLOG' | translate
+      }}</a>
     </li>
     <li class="navigation-item">
-      <a class="navigation-link" routerLink="/styleguide" routerLinkActive="active">Styleguide</a>
+      <a class="navigation-link" routerLink="/styleguide" routerLinkActive="active">{{
+        'STYLEGUIDE' | translate
+      }}</a>
     </li>
   </ul>
 </div>
