feat: self-evaluation component

--- a/src/app/components/author-of-day/author-of-day.component.html
+++ b/src/app/components/author-of-day/author-of-day.component.html
@@ -3,7 +3,9 @@
   <div *ngIf="authorOfDay; else spinner" class="author-of-day">
     <div class="col">
       <h1>{{authorOfDay.name}}</h1>
-      <img src="{{authorOfDay.image}}" alt="{{authorOfDay.name}}">
+      <a [routerLink]="['/author',authorOfDay.id]">
+        <img src="{{authorOfDay.image}}" alt="{{authorOfDay.name}}">
+      </a>
       <p>{{authorOfDay.years}}</p>
     </div>
     <div class="col">
