--- a/src/app/pages/worklog/worklog.component.html
+++ b/src/app/pages/worklog/worklog.component.html
@@ -1,1 +1,7 @@
-<p>worklog page!</p>
+<h1>worklog page!</h1>
+<p>Table with hours and time for implementing functionality</p>
+<hr>
+<p>Main 1-3 difficulties for the team during implementation</p>
+<hr>
+<app-evaluation></app-evaluation>
+<hr>
