feat: worklog page, 404 page

--- a/src/app/components/author-of-day/author-of-day.component.scss
+++ b/src/app/components/author-of-day/author-of-day.component.scss
@@ -1,14 +1,10 @@
 @import "../../../variables";
+@import "../../../mixins";
 
 .header {
-  background-color: $header-background-color;
-  color: $header-color;
+  @include divider;
   font-size: 24px;
   font-weight: bold;
-  text-align: center;
-  padding: 20px;
-  letter-spacing: 3px;
-  word-spacing: 10px;
 }
 
 .spinner-container {
@@ -48,17 +44,5 @@ img {
 }
 
 .button-more {
-  padding: 20px 50px;
-  border: 1px solid black;
-  background-color: $author-of-day-button-background-color;
-  color: $author-of-day-button-color;
-  border-radius: 5px;
-  box-shadow: 5px 5px 5px grey;
-  transition: all 0.5s;
-
-  &:hover {
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-    background-color: $author-of-day-button-background-color;
-    transform: scale(1.2);
-  }
+  @include button;
 }
