--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,6 @@
-<header class="header">
-  <app-navigation></app-navigation>
-  <app-languages></app-languages>
-</header>
+<div class="header">
+  <header>
+    <app-navigation></app-navigation>
+    <app-languages></app-languages>
+  </header>
+</div>
