--- a/src/app/pages/page404/page404.component.html
+++ b/src/app/pages/page404/page404.component.html
@@ -1,1 +1,5 @@
-<p>page404 page!</p>
+<div class="page-not-found">
+  <img src="../../../assets/404.png" alt="page 404" class="image">
+  <h2>Page not found</h2>
+  <a class="navigation-link" routerLink="/" class="button">Back to home</a>
+</div>
