--- a/src/app/pages/worklog/worklog.component.html
+++ b/src/app/pages/worklog/worklog.component.html
@@ -1,7 +1,104 @@
-<h1>worklog page!</h1>
-<p>Table with hours and time for implementing functionality</p>
+<h1>WorkLog</h1>
+<section>
+  <table>
+    <tbody>
+      <tr>
+        <td colspan="2" class="name">Andrey Knyshenko</td>
+      </tr>
+      <tr>
+        <td colspan="2" class="name">Hanna Slisenka</td>
+      </tr>
+      <tr>
+        <td colspan="2" class="name">Maksim Kirilko</td>
+      </tr>
+      <tr>
+        <td colspan="2" class="name">Morozov Alexy</td>
+      </tr>
+      <tr>
+        <td colspan="2" class="name">Petro Yuskiv</td>
+      </tr>
+      <tr>
+        <td colspan="2" class="name">Raman Haiduchyk</td>
+      </tr>
+      <tr>
+        <td class="time">2</td>
+        <td>Split the major task into small subtasks</td>
+      </tr>
+      <tr>
+        <td class="time">2</td>
+        <td>Make primary structure of the project</td>
+      </tr>
+      <tr>
+        <td class="time">2</td>
+        <td>Prepare authors data</td>
+      </tr>
+      <tr>
+        <td class="time">2</td>
+        <td>Main page</td>
+      </tr>
+      <tr>
+        <td class="time">2</td>
+        <td>Navigation menu</td>
+      </tr>
+      <tr>
+        <td class="time">2</td>
+        <td>Authors page</td>
+      </tr>
+      <tr>
+        <td class="time">2</td>
+        <td>Search widget</td>
+      </tr>
+      <tr>
+        <td class="time">2</td>
+        <td>Author full view page</td>
+      </tr>
+      <tr>
+        <td class="time">2</td>
+        <td>Photo gallery</td>
+      </tr>
+      <tr>
+        <td class="time">2</td>
+        <td>Video</td>
+      </tr>
+      <tr>
+        <td class="time">2</td>
+        <td>Map</td>
+      </tr>
+      <tr>
+        <td class="time">2</td>
+        <td>Translation and languages support</td>
+      </tr>
+      <tr>
+        <td class="time">2</td>
+        <td>Team page</td>
+      </tr>
+      <tr>
+        <td class="time">2</td>
+        <td>WorkLog page</td>
+      </tr>
+      <tr>
+        <td class="time">2</td>
+        <td>Self-Evaluation component</td>
+      </tr>
+      <tr>
+        <td class="time">2</td>
+        <td>StyleGuide page</td>
+      </tr>
+      <tr>
+        <td class="time">2</td>
+        <td>404 page</td>
+      </tr>
+    </tbody>
+  </table>
+
+</section>
 <hr>
-<p>Main 1-3 difficulties for the team during implementation</p>
+
+<h1>Main difficulties for our team</h1>
+<section>
+  <h3>Coordinating work online</h3>
+  <h3>Creating a styleguide</h3>
+  <h3>Animations / special effects</h3>
+</section>
 <hr>
 <app-evaluation></app-evaluation>
-<hr>
