--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -6,3 +6,13 @@ $header-color: #fff;
 $author-of-day-background-color: #fff;
 $author-of-day-button-background-color: $header-background-color;
 $author-of-day-button-color: #fff;
+
+$divider-background: linear-gradient(
+  270deg,
+  rgba(168, 168, 168, 0.65),
+  rgba(168, 168, 168, 0.65) 2%,
+  $header-background-color 50%,
+  rgba(168, 168, 168, 0.65) 98%,
+  rgba(168, 168, 168, 0.65)
+);
+$divider-color: #fff;
