--- a/src/app/components/languages/languages.component.scss
+++ b/src/app/components/languages/languages.component.scss
@@ -6,6 +6,8 @@
   &-btn-menu {
     height: 35px;
     width: 35px;
+    min-width: 35px;
+    line-height: normal;
     text-transform: uppercase;
     padding: 5px;
     background-color: #90a4ae;
