--- a/src/app/components/evaluation/evaluation.component.html
+++ b/src/app/components/evaluation/evaluation.component.html
@@ -1,4 +1,4 @@
 <div class="evaluation">
-  <h1>Self-evaluation</h1>
+  <h1>{{'WORKLOG.SELF_EVALUATION' | translate}}</h1>
   <app-scope [scope]="scope" [isRoot]="true" (update)="saveUpdates()"></app-scope>
 </div>
