--- a/src/app/pages/page404/page404.component.html
+++ b/src/app/pages/page404/page404.component.html
@@ -1,5 +1,5 @@
 <div class="page-not-found">
   <img src="../../../assets/404.png" alt="page 404" class="image">
-  <h2>Page not found</h2>
-  <a class="navigation-link" routerLink="/" class="button">Back to home</a>
+  <h2>{{'404_PAGE.NOT_FOUND' | translate}}</h2>
+  <a class="navigation-link" routerLink="/" class="button">{{'404_PAGE.BACK' | translate}}</a>
 </div>
