--- a/src/app/pages/worklog/worklog.component.html
+++ b/src/app/pages/worklog/worklog.component.html
@@ -1,4 +1,4 @@
-<h1>WorkLog</h1>
+<h1>{{'WORKLOG.MENU_ITEM' | translate}}</h1>
 <section>
   <table>
     <tbody>
@@ -94,11 +94,11 @@
 </section>
 <hr>
 
-<h1>Main difficulties for our team</h1>
+<h1>{{'WORKLOG.DIFFICULTIES' | translate}}</h1>
 <section>
-  <h3>Coordinating work online</h3>
-  <h3>Creating a styleguide</h3>
-  <h3>Animations / special effects</h3>
+  <h3>{{'WORKLOG.COORDINATING' | translate}}</h3>
+  <h3>{{'WORKLOG.STYLEGIUDE' | translate}}</h3>
+  <h3>{{'WORKLOG.ANIMATION' | translate}}</h3>
 </section>
 <hr>
 <app-evaluation></app-evaluation>
