Add burger mobile menu and translate architects data

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,6 +2,7 @@ $breakpoint-tablet: 768px;
 
 $header-background-color: #455a64;
 $header-color: #fff;
+$color-white: #fff;
 // author of a day
 $author-of-day-background-color: #fff;
 $author-of-day-button-background-color: $header-background-color;
