--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,7 @@
-<div class="header">
-  <header>
-    <app-navigation></app-navigation>
-    <app-languages></app-languages>
-  </header>
-</div>
+<header class="header">
+  <button class="mobile-menu-btn" isIconButton="true" isRoundButton="true" mat-mini-fab mat-icon-button aria-label="Menu icon" (click)="toggle()">
+    <mat-icon class="mat-icon-menu" aria-hidden="false">menu</mat-icon>
+  </button>
+  <app-navigation></app-navigation>
+  <app-languages></app-languages>
+</header>
