--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -10,6 +10,21 @@ header {
   position: fixed;
   top: 0;
   z-index: 10;
+
+  .mobile-menu-btn {
+    background: transparent;
+    border: 0;
+    margin-right: 20px;
+    border-radius: 50%;
+
+    @media (min-width: $breakpoint-tablet) {
+      display: none;
+    }
+  }
+
+  .mat-icon-menu {
+    color: $color-white;
+  }
 }
 
 .header {
