--- a/src/app/components/languages/languages.component.html
+++ b/src/app/components/languages/languages.component.html
@@ -1,5 +1,7 @@
 <div class="languages">
-  <button class="languages-btn-menu" mat-button [matMenuTriggerFor]="menu">{{currentLocale$ | async}}</button>
+  <button class="languages-btn-menu" mat-mini-fab color="accent" [matMenuTriggerFor]="menu" isRoundButton="true" aria-label="Example icon button with a bookmark icon">
+    {{currentLocale$ | async}}
+  </button>
   <mat-menu #menu="matMenu">
     <button mat-menu-item *ngFor="let locale of locales" (click)="select(locale.name)">{{locale.label}}</button>
   </mat-menu>
