search-widget-style

--- a/src/app/components/authors-cards-list/authors-cards-list.component.scss
+++ b/src/app/components/authors-cards-list/authors-cards-list.component.scss
@@ -3,7 +3,12 @@
   justify-items: center;
   grid-template-columns: 1fr;
   gap: 25px;
+  margin-top: 140px;
+  @media screen and (min-width: 270px) {
+    margin-top: 90px;
+  }
   @media screen and (min-width: 650px) {
+    margin: 90px 20px 0 20px;
     grid-template-columns:repeat(2, 1fr);
   }
   @media screen and (min-width: 1000px) {
