--- a/src/app/components/search-widget/search-widget.component.html
+++ b/src/app/components/search-widget/search-widget.component.html
@@ -1,1 +1,8 @@
-<p>search-widget works!</p>
+<div [ngClass]="{'background':isFilterShown}">
+  <mat-form-field [ngStyle]="{'width.px': searchLineWidth}">
+    <mat-label>Filter</mat-label>
+    <input matInput>
+  </mat-form-field>
+  <button mat-icon-button (click)="onSearchClick()"><mat-icon>search</mat-icon></button>
+</div>
+
