--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -8,6 +8,8 @@ $author-of-day-background-color: #fff;
 $author-of-day-button-background-color: $header-background-color;
 $author-of-day-button-color: #fff;
 
+$search-widget-background-color: $header-background-color;
+
 $divider-background: linear-gradient(
   270deg,
   rgba(168, 168, 168, 0.65),
