--- a/src/app/components/search-widget/search-widget.component.scss
+++ b/src/app/components/search-widget/search-widget.component.scss
@@ -3,7 +3,10 @@
 :host {
   position: fixed;
   right: 20px;
-  top: 75px;
+  top: 105px;
+  @media screen and (min-width: 270px) {
+    top: 75px
+  }
   z-index: 1;
   div{
     padding-top: 5px;
