feat: WIP save data in ngrx store

--- a/src/app/components/search-widget/search-widget.component.html
+++ b/src/app/components/search-widget/search-widget.component.html
@@ -1,1 +1,5 @@
 <p>search-widget works!</p>
+<mat-form-field class="search widget">
+  <mat-label>Enter author</mat-label>
+  <input matInput placeholder="Author" (input)="changed($event)">
+</mat-form-field>
