--- a/src/app/components/author-of-day/author-of-day.component.scss
+++ b/src/app/components/author-of-day/author-of-day.component.scss
@@ -1,5 +1,5 @@
-@import "../../../variables";
-@import "../../../mixins";
+@import '../../../variables';
+@import '../../../mixins';
 
 .header {
   @include divider;
@@ -33,7 +33,7 @@
 }
 
 img {
-  height: 80%;
+  height: 400px;
   border-radius: 10px;
   transition: 0.5s;
 
