filter bug fixes

--- a/src/app/components/authors-cards-list/authors-cards-list.component.html
+++ b/src/app/components/authors-cards-list/authors-cards-list.component.html
@@ -23,6 +23,7 @@
   </div>
   <mat-paginator [length]="authors.length"
                  [pageSize]="cardsPerPage"
+                 [pageIndex]="page"
                  [pageSizeOptions]="[5, 10]"
                  (page)="onPaginatorClick($event)">
   </mat-paginator>
