Revert "Merge branch 'develop' into authors-list"
This reverts commit 7c4e8a02b48cf63c6ad96a71f8d6eeca937b2d88, reversing
changes made to 29754ebe7934ccfdebed90be7d0478b6bfe4306b.

--- a/src/app/components/author-of-day/author-of-day.component.scss
+++ b/src/app/components/author-of-day/author-of-day.component.scss
@@ -1,5 +1,5 @@
-@import '../../../variables';
-@import '../../../mixins';
+@import "../../../variables";
+@import "../../../mixins";
 
 .header {
   @include divider;
@@ -33,7 +33,7 @@
 }
 
 img {
-  height: 400px;
+  height: 80%;
   border-radius: 10px;
   transition: 0.5s;
 
