--- a/src/app/components/authors-cards-list/authors-cards-list.component.scss
+++ b/src/app/components/authors-cards-list/authors-cards-list.component.scss
@@ -10,21 +10,21 @@
   gap: 25px;
   margin-top: 70px;
   @media screen and (min-width: 270px) {
-    margin-top: 20px;
+    margin-top: 20px
   }
   @media screen and (min-width: 650px) {
     margin: 20px 20px 0 20px;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns:repeat(2, 1fr);
   }
   @media screen and (min-width: 1000px) {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns:repeat(3, 1fr);
   }
   @media screen and (min-width: 1500px) {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns:repeat(4, 1fr);
   }
 }
 
-mat-card {
+mat-card{
   width: 200px;
   height: 350px;
   padding: 10px;
@@ -33,10 +33,10 @@ mat-card {
   }
   overflow: hidden;
   border-radius: 10px;
-  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 5px 2px rgba(0,0,0,0.5);
 }
 
-mat-card-header {
+mat-card-header{
   margin-bottom: 10px;
 }
 
@@ -53,7 +53,7 @@ mat-card-subtitle {
 .avatar {
   width: 60px;
   height: 60px;
-  border-radius: 20%;
+  border-radius: 20%;;
 }
 
 .description {
