--- a/src/app/components/authors-cards-list/authors-cards-list.component.html
+++ b/src/app/components/authors-cards-list/authors-cards-list.component.html
@@ -1,8 +1,8 @@
-<div id="host-div" *ngIf="(authors$ | async) as authors">
+<div id="host-div" *ngIf="(authors$ | async | filter : wordState) as authors">
   <div id="cards">
     <mat-card *ngFor="let author of authors | paginator : page : cardsPerPage" [class.mat-elevation-z]="true">
       <mat-card-header>
-        <img class="avatar" matCardAvatar src="{{author.image}}" alt="Image">
+        <img class="avatar" matCardAvatar src="{{author.image}}">
         <mat-card-title>
           {{author.name}}
         </mat-card-title>
@@ -28,3 +28,4 @@
                  (page)="onPaginatorClick($event)">
   </mat-paginator>
 </div>
+
