--- a/src/app/components/search-widget/search-widget.component.html
+++ b/src/app/components/search-widget/search-widget.component.html
@@ -1,9 +1,8 @@
 <div [ngClass]="{'background':isFilterShown}">
   <mat-form-field [ngStyle]="{'width.px': searchLineWidth}">
-    <mat-label>{{ 'ARCHITECTS.FILTER' | translate}}</mat-label>
+    <mat-label>Filter</mat-label>
     <input matInput id='filter-input'>
   </mat-form-field>
-  <button mat-icon-button (click)="onSearchClick()">
-    <mat-icon>search</mat-icon>
-  </button>
+  <button mat-icon-button (click)="onSearchClick()"><mat-icon>search</mat-icon></button>
 </div>
+
