--- a/src/app/components/team-member-card/team-member-card.component.html
+++ b/src/app/components/team-member-card/team-member-card.component.html
@@ -5,11 +5,6 @@
     <mat-card-subtitle>Role: {{ member.role}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-actions>
-    <a href="{{ member.githubUrl }}" >github</a>
+    <a class="github-link" href="{{ member.githubUrl }}" target="_blank"></a>
   </mat-card-actions>
-  <mat-card-footer class="info">
-    <div class="info-content">
-      <p *ngFor="let contribution of member.contribution">{{ contribution }}</p>
-    </div>
-  </mat-card-footer>
 </mat-card>
