--- a/src/app/pages/team/team.component.html
+++ b/src/app/pages/team/team.component.html
@@ -1,4 +1,4 @@
-<p>{{'TEAM.OUR_TEAM' | translate}}</p>
+<h1>{{'TEAM.OUR_TEAM' | translate}}</h1>
 <div class="main-wrap">
     <app-team-member-card *ngFor="let member of team" [member]="member"></app-team-member-card>
 </div>
