--- a/src/app/components/team-member-card/team-member-card.component.scss
+++ b/src/app/components/team-member-card/team-member-card.component.scss
@@ -1,9 +1,9 @@
 .card{
   width: 250px;
-  height: 300px;
+  height: 320px;
   background: white;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  border-radius: 0;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
   margin: 10px 20px;
   position: relative;
   cursor: pointer;
@@ -21,9 +21,6 @@
   }
   mat-card-header {
     justify-content: center;
-  }
-  mat-card-subtitle {
-    margin-bottom: 3px;
   }
   mat-card-actions {
     display: flex;
