--- a/src/app/pages/author-full-view/author-full-view.component.html
+++ b/src/app/pages/author-full-view/author-full-view.component.html
@@ -13,5 +13,6 @@
   </div>
   <div class="architect-biography">
     <h4 class="architect-biography-title">{{'ARCHITECT.BIOGRAPHY' | translate}}</h4>
+    <app-timeline [biography]="architect.biography"></app-timeline>
   </div>
 </div>
