--- a/src/app/pages/author-full-view/author-full-view.component.scss
+++ b/src/app/pages/author-full-view/author-full-view.component.scss
@@ -1,9 +1,15 @@
+@import "../../../variables";
+
 .architect {
   padding: 16px;
   color: #455a64;
 
   &-main-info {
     display: flex;
+
+    @media screen and (max-width: $breakpoint-tablet) {
+      flex-direction: column;
+    }
   }
 
   &-container-right {
@@ -11,6 +17,11 @@
     align-items: center;
     justify-content: center;
     margin-left: 15px;
+
+    @media screen and (max-width: $breakpoint-tablet) {
+      margin-top: 20px;
+      margin-left: 0;
+    }
   }
 
   &-name {
@@ -18,6 +29,10 @@
   }
   &-years {
     margin-top: 10px;
+
+    @media screen and (max-width: $breakpoint-tablet) {
+      font-size: 1.3rem;
+    }
   }
 
   &-desc {
@@ -25,6 +40,11 @@
     font-size: 14px;
     max-height: 300px;
     overflow: auto;
+
+    @media screen and (max-width: $breakpoint-tablet) {
+      font-size: 1.3rem;
+      margin-top: 20px;
+    }
   }
 
   &-image {
